[QA] 오류 체크를 위한 최신화